service.yml
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  type: NodePort
  selector:
    app: http-server
  ports:
    - port: 80
      targetPort: 7080
      nodePort: 30000  # Choose a nodePort value that is available in your cluster
