ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-server-service
                port:
                  number: 80
